--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SnakeGodot/Snakii.exe"
+export_path="../../../Desktop/SnakeGodot/RELEASE/Snakii.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -31,16 +31,16 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
-application/modify_resources=true
-application/icon="res://icon.svg"
+application/modify_resources=false
+application/icon="res://Ressource/LOGO2.png"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
+application/file_version="1.0"
+application/product_version="1.0"
+application/company_name="Chocoland.tv"
+application/product_name="SnakManiac"
+application/file_description="Snake Game"
+application/copyright="Chocoland.tv"
 application/trademarks=""
 application/export_angle=0
 ssh_remote_deploy/enabled=false
@@ -61,5 +61,5 @@ ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debu
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
 dotnet/include_scripts_content=false
-dotnet/include_debug_symbols=true
+dotnet/include_debug_symbols=false
 dotnet/embed_build_outputs=false
